--- a/CrownEngine/.vscode/settings.json
+++ b/CrownEngine/.vscode/settings.json
@@ -46,6 +46,10 @@
         "typeinfo": "cpp",
         "sstream": "cpp",
         "fstream": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "iomanip": "cpp"
     }
 }
